syntax = "proto3";

import "common.proto";

option java_package = "electionguard.protogen";
option java_outer_classname = "CiphertextBallotProto";

// An encrypted ballot that has been cast or spoiled.
message SubmittedBallot {
  enum BallotState {
    UNKNOWN = 0;
    CAST = 1;
    SPOILED = 2;
  }

  string ballot_id = 1; // a unique Ballot ID created by the external system
  string ballot_style_id = 2; // The ballot_style_id of the BallotStyle in the Election Manifest
  ElementModQ manifest_hash = 3; // Hash of the manifest
  ElementModQ previous_tracking_hash = 4; // Previous ballot tracking hash or seed hash, aka code_seed
  ElementModQ tracking_hash = 5; // Unique ballot tracking hash for this ballot, aka code
  repeated CiphertextBallotContest contests = 6;
  int64 timestamp = 7; // Timestamp at which the ballot encryption is generated, in seconds since the epoch UTC.
  ElementModQ crypto_hash = 8; // The hash of the encrypted ballot representation
  BallotState state = 9;
}

// Encrypted selections for a specific contest.
message CiphertextBallotContest {
  string contest_id = 1; // matches the ContestDescription.contest_id
  uint32 sequence_order = 2; // matches the ContestDescription.sequence_order
  ElementModQ contest_hash = 3; // Hash of the contest description
  repeated CiphertextBallotSelection selections = 4;
  ElGamalCiphertext ciphertext_accumulation = 5;  // The contest total (A, B)
  ElementModQ crypto_hash = 6; // The hash of the encrypted values
  ConstantChaumPedersenProof proof = 7;  // The proof that the sum of the selections does not exceed the maximum
               // available selections for the contest, and that the proof was generated with the nonce
}

// Encryption of a specific selection.
message CiphertextBallotSelection {
  string selection_id = 1; // matches the SelectionDescription.selection_id
  uint32 sequence_order = 2; // matches the SelectionDescription.sequence_order
  ElementModQ selection_hash = 3; // Hash of the selection description
  ElGamalCiphertext ciphertext = 4; // The encrypted representation of the vote field
  ElementModQ crypto_hash = 5; // The hash of the encrypted values
  bool is_placeholder_selection = 6;
  DisjunctiveChaumPedersenProof proof = 7; // The proof that demonstrates the selection is an encryption of 0 or 1,
                                           // and was encrypted using the nonce.
  ElGamalCiphertext extended_data = 8;     // Not used
}

message ConstantChaumPedersenProof {
  ElementModP pad = 1;
  ElementModP data = 2;
  ElementModQ challenge = 3;
  ElementModQ response = 4;
  int32 constant = 5;
}

message DisjunctiveChaumPedersenProof {
  ElementModP proof_zero_pad = 1;
  ElementModP proof_zero_data = 2;
  ElementModQ proof_zero_challenge = 3;
  ElementModQ proof_zero_response = 4;
  ElementModP proof_one_pad = 5;
  ElementModP proof_one_data = 6;
  ElementModQ proof_one_challenge = 7;
  ElementModQ proof_one_response = 8;
  ElementModQ challenge = 9;
}